# computer_vision_project

./: CMakeLists.txt  package.xml
launch/: detect_people.launch
src/: people_tracking.cpp
worlds/: empty.world
